force-app/main/default/objects/DM_Temp_Invoice_Scheduler__c/DM_Temp_Invoice_Scheduler__c.object-meta.xml
<CustomObject>
    <description>Object to hold information for invoice scheduler records to be created for data migration run.</description>
    <label>DM Temp Invoice Scheduler</label>
    <nameField>
        <displayFormat>DMTIS-{0000}</displayFormat>
        <label>DM Temp Invoice Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Temp Invoice Schedulers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>