force-app/main/default/objects/DM_Temp_Invoice_Scheduler__c/fields/DM_Invoice_Scheduler_Group__c.field-meta.xml
<CustomField>
    <fullName>DM_Invoice_Scheduler_Group__c</fullName>
    <description>DM Invoice Scheduler Group to which temp records belongs.</description>
    <label>DM Invoice Scheduler Group</label>
    <referenceTo>DM_Invoice_Scheduler_Group__c</referenceTo>
    <relationshipLabel>DM Temp Invoice Schedulers</relationshipLabel>
    <relationshipName>DM_Temp_Invoice_Schedulers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>