force-app/main/default/objects/DM_Temp_Invoice_Scheduler__c/fields/Invoice_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Target_Date__c</fullName>
    <description>Target Date for invoice scheduler</description>
    <inlineHelpText>Target Date for invoice scheduler</inlineHelpText>
    <label>Invoice Target Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>