force-app/main/default/objects/DM_Temp_Invoice_Scheduler__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence in which invoice schedulers will be created.</description>
    <label>Sequence</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>